--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,12 @@ license = "\"MIT\""
 
 [tool.poetry.dependencies]
 python = "^3.8"
+pandas = "^1.2.3"
+numpy = "^1.20.1"
 
 [tool.poetry.dev-dependencies]
+pytest = "^6.2.2"
+pytest-cov = "^2.11.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
