--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ license = "\"MIT\""
 python = "^3.8"
 pandas = "^1.2.3"
 numpy = "^1.20.1"
+sklearn = "^0.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.2"
