--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ pandas = "^1.2.3"
 numpy = "^1.20.1"
 altair = "^4.1.0"
 vega-datasets = "^0.9.0"
+sklearn = "^0.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.2"
